DuPont DevSB/src/objects/ccrz__E_RuleTargetSKU__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Rule Target SKUs</relationshipLabel>
        <relationshipName>E_RuleTargetSKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RuleTargetSKUId__c</fullName>
        <externalId>true</externalId>
        <label>Rule Target SKU Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <referenceTo>ccrz__E_Rule__c</referenceTo>
        <relationshipLabel>Rule Target SKUs</relationshipLabel>
        <relationshipName>E_RuleTargetSKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Rule Target SKU</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Target SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Rule Target SKUs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>